syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "JobProcessing.Application";

package jobProcessing;

// The greeting service definition.
service JobService {
  // Sends a greeting
  rpc GetJobById (GetJobByIdRequest) returns (JobResponse);
  rpc GetJobs (GetJobsQuery) returns (JobResponses);
  rpc GetJobCategories (Empty) returns (CategoryResponses);
  rpc GetJobLocations (GetJobLocationsQuery) returns (Addresses);
  rpc CreateJob(CreateJobRequest) returns (Id);
}

message Empty {}

message Id {
	int32 Id = 1;
}

message GetJobByIdRequest {
	int32 Id = 1;
}

message CreateJobRequest {
	string Name = 1;
    string Description = 2;
	string HighlightedDescription = 3;
	int32 NumberOfEmployeesRequired = 4;
    JobAddressRequest Location = 5;
    JobDuration Duration = 6;
    Price Price = 7;
    JobUrgency Urgency = 8;
    int32 CategoryId = 9;
    int32 UserId = 10;
}

message JobResponse {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  string HighlightedDescription = 4;
  int32 NumberOfEmployeesRequired = 5;
  Address Location = 6;
  JobDuration Duration = 7;
  Price Price = 8;
  JobUrgency Urgency = 9;
  google.protobuf.Timestamp CreateDate = 10;
  int32 CategoryId = 11;
  string CategoryName = 12;
}

message JobResponses {
	repeated JobResponse Jobs = 1;
}

message CategoryResponses {
	repeated CategoryResponse Categories = 1;
}

message GetJobLocationsQuery {
	string Location = 1;
}

message Addresses {
	repeated Address Address = 1;
}

message JobDuration {
	int32 Amount = 1;
	JobDurationType DurationType = 2;
}

message Price {
	string CurrencyCode = 1;
	PriceType PriceType = 2;
	int32 MinPrice = 3;
	int32 MaxPrice = 4;
}

message JobAddressRequest {
	float Latitude = 1;
	float Longitude = 2;
	string Country = 3;
	string City = 4;
	string AddressLine = 5;
	string Zip = 6;
}

message Address {
	int32 Id = 1;
	float Latitude = 2;
	float Longitude = 3;
	string Country = 4;
	string City = 5;
	string AddressLine = 6;
	string Zip = 7;
}

message GetJobsQuery {
	string Name =  1;
	string Description = 2;
	Price Price = 3;
	int32 Page = 4;
	int32 PageSize = 5;
	string OrderBy = 6;
	repeated int32 CategoryIds = 7;
}

message CategoryResponse {
	int32 Id = 1;
	string CategoryName = 2;
}

enum JobDurationType {
    Hours = 0;
    Days = 1;
    Months = 2;
}

enum PriceType {
	Hourly = 0;
	FixedPrice = 1;
}

enum JobUrgency {
	Normal = 0;
    Hight = 1;
    Urgent = 2;
}
